--- a/P005493.opf/layers/v001/Pagination.yml
+++ b/P005493.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 0f967c6f1f37413fa23d63984f1998b0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ba2e3c61cbc04ff5be4f8526ed19a22b:
