--- a/P005493.opf/meta.yml
+++ b/P005493.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005493
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG861
   title: བོད་ལྗོངས་ཀྱི་གཏམ་རྒྱུད
